syntax = "proto3";

package customer;
option go_package="./customer";

message InfoReq {
  uint64 id = 1;
}

message InfoByEmailReq {
  string email = 1;
}

message InfoResp {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string secret = 4;
}

service Customer {
  rpc Info(InfoReq) returns(InfoResp);
  rpc InfoByEmail(InfoByEmailReq) returns(InfoResp);
}
